<resources>
    <string name="app_name">LeitorQrcode</string>

    <!--Activity VisualizarDados-->
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="matricula">Matricula</string>
    <string name="curso">Curso</string>
    <string name="data_formacao">Data Formacao</string>
    <string name="data_ingresso">Data Ingresso</string>
    <string name="email">Email</string>
    <string name="centro">Centro</string>

    <!--Activity Main-->
    <string name="buttonqrcode">Ler QRCode</string>
    <string name="visualizardados">Visualizar Dados</string>
</resources>
